style.css
html, body {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
	overflow-x: hidden;
}

div {
  border: solid;
}

ul {
  list-style-type: none;
}

hr {
	box-shadow: 0 0 5px 1px black;
	width: 90%;
	margin: 0px auto;
	margin-top: 15px;
	margin-bottom: 15px;
	margin-left: 5%%;
	margin-right: 5%;
	padding: 0;
}

table {
	margin: 10px;
}

textarea {
	width: 300px;
	height: 200px;
}

textarea:focus {
	border: solid 1px #707070;
	box-shadow: 0 0 5px 1px #14626c;
}

input[type="text"]:focus {
	border: solid 1px #707070;
	box-shadow: 0 0 5px 1px #14626c;
}

button:focus {
	border: solid 1px #707070;
	box-shadow: 0 0 5px 1px #14626c;
}

#headerBar {
  position: fixed;
  width: 100%;
  height: 100px;
	top: 0;
	left: 0;
  margin: 0px;
	z-index: 9999;
	background-color: white;
}

#casesDiv {
  position: absolute;
  top: 120px;
	left: 0;
  width: 80%;
	height: 0;
	border: none;
}

#buttonDiv {
	position: fixed;
	top: 23%;
	left: 82%;
	width: 20%;
	height: 80%;
	padding: 5%;
	text-align: left;
	border: none;
}

.singleCase {
  position: relative;
	background: #cccccc;
  margin: 0px auto;
	margin-top: 3px;
	padding: 0;
  width: 95%;
  height: 60px;
	text-align: center;
}

.singleCase p {
	position: absolute;
	top: 10%;
	left: 0;
	margin: 0px;
	padding: 0;
	padding-left: 3%;
	height: 55%;
	width: 100%
	text-align: left;
	font-size: 1em;
}

.singleCase ul {
	position: absolute;
	top: 55%;
	left: 0;
	padding: 0;
	width: 100%;
	height: 100%;
	margin: 0;

}

.singleCase ul li {
	position: relative;
  display: inline;
	background: #404040;
	float: left;
	height: 45%;
	width: 20%;
	font-size: 1em;
	text-align: left;
	text-indent: 10px;
	outline: 1px #000 solid;
}

.singleCase ul li:hover {
	background: #cccccc;
}

.singleCase ul li p {
	vertical-align: center;
}

.singleCase ul li:nth-child(5) {
	padding: 0;
	border: none;
}

#darkenPage {
	position: fixed;
	border: none;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: gray;
	opacity: .8;
	z-index: 3;
}

#scheduleForm {
  position: relative;
  top: 5%;
  left: 5%;
  width: 90%;
	z-index: 4;
	background-color: white;
	border: none;
	outline: 1px solid black;
}

#scheduleFormFieldsDiv {
	position: absolute;
	width: 100%;
	height: 90%;
	background-color: white;
	text-align: left;
	border: none;
	overflow: scroll;
	overflow-y: scroll;
	overflow-x: hidden;
	outline: 1px solid black;
}

#scheduleFormButtonDiv {
	position: absolute;
	bottom: 0;
	right: 0;
  width: 100%;
  height: 10%;
	background-color: white;
	text-align: right;
	border: none;
	outline: 1px solid black;
}

#scheduleSaveButton {
	margin: 8px;
	margin-top: 15px;
}

#scheduleCloseButton {
	margin: 8px;
	margin-top: 15px;
}

#idxForm {
	position: relative;
  margin-top: 12%;
  left: 25%;
  width: 40%;
	z-index: 5;
	background-color: white;
	border: none;
	outline: 1px solid black;
	text-align: center;
}

#idxFormFieldsDiv {
	position: absolute;
	width: 100%;
	height: 80%;
	background-color: white;
	outline: 1px solid black;
	border: none;
}

#idxFormButtonDiv {
	position: absolute;
	bottom: 0;
	right: 0;
  width: 100%;
  height: 20%;
	background-color: white;
	text-align: right;
	border: none;
	outline: 1px solid black;
}

#idxSaveButton {
	margin: 2%;
}

#idxCloseButton {
	margin: 2%;
}

#idxFormFieldsDiv table tr:nth-child(2) {
	height: 150px;
}

#idxFormFieldsDiv table th {
	margin: 0px auto;
}

#idxFormFieldsDiv table tr td {
	width: 30%;
}

#idxFormFieldsDiv table tr td:hover {
	background-color: #cccccc;
}

#precertForm {
  position: relative;
	left: 5%;
	margin-top: 3%;
  width: 90%;
	z-index: 4;
	background-color: white;
	border: none;
	outline: 1px solid black;
}

#precertFormFieldsDiv {
	position: absolute;
	width: 100%;
	height: 90%;
	background-color: white;
	text-align: left;
	border: none;
	overflow: scroll;
	overflow-y: scroll;
	overflow-x: hidden;
	outline: 1px solid black;
}

#precertFormButtonDiv {
	position: absolute;
	bottom: 0;
	right: 0;
  width: 100%;
  height: 10%;
	background-color: white;
	text-align: right;
	border: none;
	outline: 1px solid black;
}

#precertSaveButton {
	margin: 8px;
	margin-top: 15px;
}

#precertCloseButton {
	margin: 8px;
	margin-top: 15px;
}

#precertForm #precertInsuranceTable tr {
	float: left;
}

#precertForm #precertInsuranceTable tr td textarea {
	height: 30%;
}

#notesTable {
	border-spacing: 20px;
	text-align: center;
	width: 80%;
	margin: 0px auto;
}

#precertNotesTable {
	border-spacing: 20px;
	text-align: center;
	width: 80%;
	margin: 0px auto;
}

#reservationTasking {
	border-spacing: 20px;
	text-align: center;
	width: 80%;
	margin: 0px auto;
}

